<resources>
    <string name="app_name">如驿如意</string>

    <string name="errcode_success">登录成功</string>
    <string name="share_success">分享成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_fail">发送失败</string>
    <string name="errcode_usuall">一般错误</string>

    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_share">分享</string>

    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <!--邀请有礼-->
    <!-- 一，购买轮胎1-3-->
    <string name="buy_shoe_title1">点击按钮分享链接</string>
    <string name="buy_shoe_rule1">点击下方分享按钮，将链接分享给微信好友</string>
    <string name="buy_shoe_title2">好友注册并购买轮胎</string>
    <string name="buy_shoe_rule2">好友经过您分享的链接成功注册并且在APP内购买轮胎</string>
    <string name="buy_shoe_title3">您可得百元现金红包</string>
    <string name="buy_shoe_rule3">多邀多得，上不封顶，现金红包可提现</string>
    <!-- 二，邀请注册1-3-->
    <string name="invite_register_title1">点击按钮分享链接</string>
    <string name="invite_register_rule1">点击下方分享按钮，将链接分享给微信好友</string>
    <string name="invite_register_title2">好友经过您分享的链接注册成功</string>
    <string name="invite_register_rule2">每邀请3人注册您可得精致洗车券1张</string>
    <string name="invite_register_title3">您的好友可得精致洗车券两张</string>
    <string name="invite_register_rule3">精致洗车券仅限在如驿如意APP上绑定车辆后下单使用</string>

    <string name="goods_points_info">·特别适合于各种中型和紧凑型SUV、四驱车型、中高端商务MPV、各类B型轿车和中高端A级家用轿车\n·特别推荐同于1.0t-0.8T涡轮增压发动机或者1.6L-2.4L自然吸气发动机\n·规格:4L\n·型号:5W-40W\n商品需要客户自行选择门店自提</string>

</resources>
